syntax = "proto3";
package com.vang;
option java_package = "com.vang.auth_user_service.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "AuthUserServer";

service GetAuthUserInformation {
  rpc getAuthUserInfo(GetAuthUserInformationRequest) returns (GetAuthUserInformationResponse);
}

service CreateOauth2Info {
  rpc authenticate(CreateOauth2InfoRequest) returns (CreateOauth2InfoReply);
}

message GetAuthUserInformationRequest {
  int32 type = 1;
  string username = 2;
}

message GetAuthUserInformationResponse {
  bool status = 1;
  string username = 2;
}

message CreateOauth2InfoRequest {
  string username = 1;
}

message CreateOauth2InfoReply {
  bool status = 1;
  string jwt = 2;
}